k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-hello-world-python-flask
  labels:
    app: kubernetes-hello-world-python-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-hello-world-python-flask
  template:
    metadata:
      labels:
        app: kubernetes-hello-world-python-flask
    spec:
      containers:
      - name: kubernetes-hello-world-python-flask
        image: srikatari76/kubernetes-hello-world-python-flask
        ports:
        - containerPort: 8080
