k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-hello-world-python-flask
spec:
  selector:
    app: kubernetes-hello-world-python-flask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
